tests/baselines/reference/functionOverloads4.errors.txt
==== tests/cases/compiler/functionOverloads4.ts (1 errors) ====
    function foo():number;
    ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2148: Overload signature is not compatible with function definition.
    function foo():string { return "a" }